--- a/public/index.html
+++ b/public/index.html
@@ -284,6 +284,7 @@
     </footer>
 
     <script src="../src/hash-utils.js"></script>
+    <script src="../src/js/map-loader.js"></script>
     <script src="../src/landing.js"></script>
     <script src="../src/adblocker-manager.js"></script>
 </body>
