removed side bar for now for future creation

--- a/public/map-leaflet.html
+++ b/public/map-leaflet.html
@@ -91,7 +91,8 @@
             
             <!-- Nav tabs -->
             <div class="leaflet-sidebar-tabs">
-                <ul role="tablist">
+                <!-- side bar todo -->
+                <!-- <ul role="tablist">
                     <li><a href="#filters" role="tab"><i class="fas fa-filter"></i></a></li>
                     <li><a href="#floors" role="tab"><i class="fas fa-building"></i></a></li>
                 </ul>
@@ -101,7 +102,7 @@
                     <li><a href="#reset" role="tab"><i class="fas fa-trash"></i></a></li>
                     <li><a href="#edit" role="tab"><i class="fas fa-map-marked"></i></a></li>
                     <li><a href="#attributions" role="tab"><i class="fas fa-info-circle"></i></a></li>
-                </ul>
+                </ul> -->
             </div>
 
             <!-- Tab panes -->
