--- a/public/map-leaflet.html
+++ b/public/map-leaflet.html
@@ -458,12 +458,13 @@
                 <!-- Marker Filters Panel -->
                 <div class="leaflet-sidebar-pane" id="filters">
                     <h1 class="leaflet-sidebar-header">
-                        <i class="fas fa-filter"></i> Marker Filtering
+                        <i class="fas fa-filter"></i> 
+                        <text class="sidebar-text">Marker Filtering</text>
                         <span class="leaflet-sidebar-close"><i class="fas fa-caret-left"></i></span>
                     </h1>
                     <div class="filters-container">
                         <div class="filter-section">
-                            <h3>🎯 Marker Types</h3>
+                            <h3>Marker Types</h3>
                             <div class="filter-checkboxes" id="marker-type-filters">
                                 <!-- Dynamically populated -->
                             </div>
@@ -482,7 +483,8 @@
                 <!-- Floor Selection Panel -->
                 <div class="leaflet-sidebar-pane" id="floors">
                     <h1 class="leaflet-sidebar-header">
-                        <i class="fas fa-building"></i> Floor Selection
+                        <i class="fas fa-building"></i> 
+                        <text class="sidebar-text">Floor Selection</text>
                         <span class="leaflet-sidebar-close"><i class="fas fa-caret-left"></i></span>
                     </h1>
                     <div class="floors-container">
@@ -498,7 +500,8 @@
                 <!-- Custom Markers Panel -->
                 <div class="leaflet-sidebar-pane" id="custom-markers">
                     <h1 class="leaflet-sidebar-header">
-                        <i class="fas fa-map-marker-alt"></i> Custom Markers
+                        <i class="fas fa-map-marker-alt"></i> 
+                        <text class="sidebar-text">Custom Markers</text>
                         <span class="leaflet-sidebar-close"><i class="fas fa-caret-left"></i></span>
                     </h1>
                     <div class="custom-markers-container">
@@ -577,7 +580,8 @@
                 <!-- Drawing Tools Panel -->
                 <div class="leaflet-sidebar-pane" id="drawing">
                     <h1 class="leaflet-sidebar-header">
-                        <i class="fas fa-pencil-alt"></i> Drawing Tools
+                        <i class="fas fa-pencil-alt"></i>
+                        <text class="sidebar-text">Drawing Tools</text>
                         <span class="leaflet-sidebar-close"><i class="fas fa-caret-left"></i></span>
                     </h1>
                     <div class="drawing-container">
@@ -631,7 +635,8 @@
                 <!-- Info Panel -->
                 <div class="leaflet-sidebar-pane" id="info">
                     <h1 class="leaflet-sidebar-header">
-                        <i class="fas fa-info-circle"></i> About
+                        <i class="fas fa-info-circle"></i> 
+                        <text class="sidebar-text2">About</text>
                         <span class="leaflet-sidebar-close"><i class="fas fa-caret-left"></i></span>
                     </h1>
                     <div class="info-container">
@@ -671,7 +676,8 @@
                 <!-- GitHub Panel -->
                 <div class="leaflet-sidebar-pane" id="github">
                     <h1 class="leaflet-sidebar-header">
-                        <i class="fab fa-github"></i> GitHub Repository
+                        <i class="fab fa-github"></i>
+                        <text class="sidebar-text">GitHub Repository</text>
                         <span class="leaflet-sidebar-close"><i class="fas fa-caret-left"></i></span>
                     </h1>
                     <div class="github-container">
@@ -736,7 +742,8 @@
                 <!-- Discord Panel -->
                 <div class="leaflet-sidebar-pane" id="discord">
                     <h1 class="leaflet-sidebar-header">
-                        <i class="fab fa-discord"></i> Community Discord
+                        <i class="fab fa-discord"></i> 
+                        <text class="sidebar-text3">Community Discord</text>
                         <span class="leaflet-sidebar-close"><i class="fas fa-caret-left"></i></span>
                     </h1>
                     <div class="discord-container">
@@ -797,7 +804,8 @@
                 <!-- Settings Panel -->
                 <div class="leaflet-sidebar-pane" id="settings">
                     <h1 class="leaflet-sidebar-header">
-                        <i class="fas fa-cog"></i> Settings & Actions
+                        <i class="fas fa-cog"></i> 
+                        <text class="sidebar-text">Settings & Actions</text>
                         <span class="leaflet-sidebar-close"><i class="fas fa-caret-left"></i></span>
                     </h1>
                     <div class="settings-container">
