--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     
     <!-- Note: Security headers should be set at server level (see .htaccess or nginx.conf) -->
     <!-- Meta CSP is limited and some directives like frame-ancestors are ignored -->
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: blob: https: http:;">
+    <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: blob: https: http:;"> -->
     
     <link rel="stylesheet" href="../src/landing.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -287,5 +287,7 @@
     <script src="../src/js/map-loader.js"></script>
     <script src="../src/landing.js"></script>
     <script src="../src/adblocker-manager.js"></script>
+    <script src="../src/js/addblocker-detection.js"></script>
+    <script src="../src/js/addblocker-popup.js"></script>
 </body>
 </html>
