--- a/public/map-leaflet.html
+++ b/public/map-leaflet.html
@@ -2,6 +2,8 @@
 <html>
 
 <head>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4821072925153492"
+     crossorigin="anonymous"></script>
     <title>Arena Breakout Interactive Map</title>
 
     <meta charset="utf-8" />
@@ -428,12 +430,16 @@
         </button>
     </div>
 
-    <!-- Top Ad Space -->
     <div id="top-ad" class="ad-space top-ad">
-        <div class="ad-content">
-            <h3>Premium Ad Spot</h3>
-            <p>Your advertisement here - Top banner space</p>
-        </div>
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-XXXXXXXXXXXXXXXXX"
+             crossorigin="anonymous"></script>
+        <ins class="adsbygoogle"
+             style="display:inline-block;width:728px;height:90px"
+             data-ad-client="ca-pub-XXXXXXXXXXXXXXXXX"
+             data-ad-slot="1234567890"></ins>
+        <script>
+             (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
     </div>
 
     <!-- Main Content Area -->
@@ -867,13 +873,17 @@
             </a>
         </div>
         
-        <!-- Bottom Ad Space -->
         <div id="bottom-ad" class="ad-space bottom-ad">
-            <div class="ad-content">
-                <h3>Featured Advertisement</h3>
-                <p>Your advertisement here - Featured banner space</p>
-            </div>
-        </div>
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-XXXXXXXXXXXXXXXXX"
+             crossorigin="anonymous"></script>
+        <ins class="adsbygoogle"
+             style="display:inline-block;width:728px;height:250px"
+             data-ad-client="ca-pub-XXXXXXXXXXXXXXXXX"
+             data-ad-slot="0987654321"></ins>
+        <script>
+             (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
+    </div>
         
     </div>
 
