--- a/public/map-leaflet.html
+++ b/public/map-leaflet.html
@@ -430,7 +430,8 @@
         </button>
     </div>
 
-    <div id="top-ad" class="ad-space top-ad">
+<!-- todoads -->
+    <!-- <div id="top-ad" class="ad-space top-ad">
         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-XXXXXXXXXXXXXXXXX"
              crossorigin="anonymous"></script>
         <ins class="adsbygoogle"
@@ -440,7 +441,7 @@
         <script>
              (adsbygoogle = window.adsbygoogle || []).push({});
         </script>
-    </div>
+    </div> -->
 
     <!-- Main Content Area -->
     <div id="main-content">
@@ -872,7 +873,10 @@
                 <i class="fas fa-times"></i>
             </a>
         </div>
-        
+
+
+        <!-- todoads -->
+<!--         
         <div id="bottom-ad" class="ad-space bottom-ad">
         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-XXXXXXXXXXXXXXXXX"
              crossorigin="anonymous"></script>
@@ -883,7 +887,7 @@
         <script>
              (adsbygoogle = window.adsbygoogle || []).push({});
         </script>
-    </div>
+    </div> -->
         
     </div>
 
